--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,8 +8,8 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: David Pech
+    tagline: Kubernetes, ArgoCD, AWS, OCI, Postgres fan & Co-founder at Emmy
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
@@ -17,10 +17,10 @@ sidebar:
     phone: +420 723 517 151
     timezone: Europe/Prague
     citizenship: CZ
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
+    website: 
+    linkedin: 
+    xing: 
+    github: 
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
@@ -28,7 +28,7 @@ sidebar:
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: http://www.africau.edu/images/default/sample.pdf
+    pdf:
 
     languages:
       title: Languages
@@ -42,12 +42,8 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Accomplished DevOps professional with 20 years of experience in software development and infrastructure management. Proficient in a wide array of technologies within the Kubernetes and CNCF ecosystem, with a focus on producing high-quality, sustainable software solutions. Known for a pragmatic and security-conscious approach to technology adoption. Highly effective in leading hands-on teams to deliver direct value to customers. Passionate about educating and enabling teams in the adoption and understanding of cloud technologies.
+
 education:
     title: Education
     info:
@@ -77,43 +73,73 @@ education:
 experiences:
     title: Experiences
     info:
-      - role: Lead Developer
-        time: 2015 - Present
-        company: Startup Hubs, San Francisco
+      - role: Co-Founder, Scala Backend & AWS Infrastructure Engineer
+        time: 2020/10 - Present
+        company: Emmy Medical
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
-      - role: Senior Software Engineer
-        time: 2014 - 2015
-        company: Google, London
+          - Cofounded Czech e-health startup - smart productivity tool connecting GPs with their patients
+          - Built backend services in Scala for AWS Lambda in a team of 4 BE developers
+          - Operated multi-tenant SaaS product for CZ, SK market focusing on Golden signals in observability
+          - Optimized PostgreSQL Aurora multi-tenant database down to 10% of resources and 25% of costs
+          - Reduced overall AWS cloud bill by 50% and introduced better cost visibility
+          - Secured project using AWS Organizations, IAM focused on the Well-Architected framework
+          - Contributed to initial MVP analysis and coordinated UX feature design
+
+      - role: Principal DevOps Engineer
+        time: 2020/11 - 2023/12
+        company: U & SLUNO
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - role: UI Developer
-        time: 2012 - 2014
-        company: Amazon, London
+          - Led technically and methodically company dev team of 25 people. Transitioned them from a traditional waterfall OracleDB 12c, Java 8 setup to modern software development practices by advocating for agile methodologies and the integration of lighter components (e.g., PostgreSQL, Spring Boot 3, Java 17).
+          - Developed Java microservice backend for WES (Warehouse Execution System) as an architect. WES enabled robots to sort goods in the warehouse. Deployed PoC for the first customer on Kubernetes with hybrid networking
+          - Strongly advocated for Amazon's "you build it, you run it" model, enhancing team responsibility and operational efficiency. Built an internal "platform" (basic K8s app stack) to help e-commerce and WES divisions make this transition
+          - Led migration from monolithic PHP applications to modular, containerized architectures using DockerSwarm, eventually transitioning to Kubernetes with ArgoCD GitOps for 5 e-commerce customers (built CI/CD tools and Kubernetes infrastructure for 17 services)
+          - Addressed OnPrem VMware infrastructure limitations by adopting Oracle Cloud (OCI) and AWS. - Consolidated 220 servers OnPrem and migrated 60% of active customer workloads to Oracle Cloud in 2 years.
+          - Introduced Gitlab and CI/CD pipelines to reach better productivity - to zero-downtime deployment in peak hours
+          - Built internal observability solution based on Zabbix for "static" infrastructure. Deploy federated Prometheus for "dynamic" workloads across 11 clusters. Introduces post-mortems and advocates for switching to an SLO-based approach for customers.
+          - Replatformed legacy Java 4,6 with Oracle Forms 6i ERP product to Java 8,17 with Oracle Forms 12c with CI pipelines and Kubernetes deployment. Consolidated the project sources across all customers to a single code base from a module-patch-based model
+          - Maintained 3 Oracle Kubernetes clusters along with 8 on-prem clusters for customers. 
+          - Contributed to in-house Python E2E automated test tool for Java Web Start apps
+      - role: Vice-Charmain of the Board, IKIS EHR Team Lead
+        time: 2015/04 - 2020/07
+        company: Medical Systems, part of AGEL Group
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          - In-house SW development with an annual turnover of around 100M CZK (EUR 4M), around 30 employees, part of AGEL Group
+          - COO and responsible for the main product - IKIS Electronic Health Record - team of 25 consultants and developers
+          - Won public business case of implementing EHR for Ostrava Faculty Hospital (1100 beds, replacing 23-year-old legacy EHR, first major case in CZ in 4 years for any EHR vendor)
+          - Project manager for EHR implementations - Ostrava FH, Hospital Jablonec nad Nisou - 377 beds, and supervisor for smaller implementations (Hospital Jeseníky and Hospital Louny)
+          - Coordinated stakeholders and investor meetings, delivering around 10-15 major features annually
+          - Initiated EHR architecture shift from monolith to first microservices - Mobile IKIS, inpatient medication process, integration bus, Czech EET, medical devices - UDI, GDPR
+          - Developed EHR as a "hobby" - Zoom function for Java Swing forms, middle-ware development
+
+      - role: Chief Information Office (CIO)
+        time: 2016/11 - 2017/10
+        company: Laboratoře AGEL, part of AGEL Group
+        details: |
+          - CIO of the largest laboratory chain in the Czechia
+          - Crisis manager for a limited time - leading a company IT department of 4 IT specialists
+          - The primary objective was to fix the data corruption that caused recurring outages of primary systems and to gain back the trust of our employees
+          - Found a disk array configuration problem that caused the NTFS corruption for the MS SQL Database VM in the first month
+          - After the year, the IT department was reconstructed along with the IT service catalog and handed over to a routine service
+          - HW server racking and installation of Windows and MS SQL management
+      - role: Senior Java Software Engineer
+        time: 2009/06 - 2015/03
+        company: RAYNET
+        details: |
+          - SCRUM Master for CRM team of 7
+          - Backend Java development for both internal CRM development and external projects - introducing Spring 3
+          - Participated in infrastructure projects (early days of DevOps and OpenStack). Built SaaS platform that could create a new tenant (Java App server + PostgreSQL) under minute using Chef and Puppet
+      - role: CEO and Ruby on Rails Software Engineer
+        time: 2008/11 - 2013/03
+        company: Weblift
+        details: |
+          - Co-owner of a small web and e-commerce shop employing 4 and 10 interns at its peak
+          - Ruby on Rails on Shopick platform (article price comparison tool between multiple e-commerce sites) - the project won 3rd place in the entrepreneurs competition of Ostrava University Startup Incubator
+      - role: PHP Junior Developer
+        time: 2006/07 - 2007/10
+        company: Shopsys
+        details: |
+          - Coded and later maintained 8 e-commerce sites design into XHTML, CSS, JS with PHP backend using Subversion
+          - Created a CMS module for the product
 
 certifications:
       title: Certifications
