--- a/_data/data.yml
+++ b/_data/data.yml
@@ -164,71 +164,27 @@ certifications:
             - Certificate in Advanced English (CAE) - English level C1
 
 projects:
-    title: Projects
-    intro: >
-      You can list your side projects in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
-
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-skills:
     title: Skills &amp; Proficiency
 
-    toolset:
+    assignments:
 
-Expert knowledge:
-- Linux (since Debian Woody)
-- Kubernetes, ArgoCD
-- Prometheus stack
-- Terraform
-- AWS, OracleCloud (OCI)
-- DockerSwarm, Docker, buildkit
-- Java (since 1.5)
-- PostgreSQL (since 9.3)
+      - title: Expert knowledge - infrastructure
+        link: "#"
+        tagline: "Linux (since Debian Woody), Kubernetes, ArgoCD, Prometheus stack, Terraform, AWS, OracleCloud (OCI), DockerSwarm, Docker, buildkit"
 
-Professional in:
-- Scala, PHP, Go
-- GitLab, Github, Bitbucket
-- ElasticSearch (OpenSearch) - Logstash - Kibana, Fluentbit, 
-- Zabbix
-- Kafka, MongoDB, Redis
-- Traefik, Cilium, Rook/CephFS
-      - name: Python & Django
-        level: 98%
+      - title: Professional - infrastructure
+        link: "#"
+        tagline: ElasticSearch (OpenSearch), Logstash, Kibana, Fluentbit, Zabbix, Kafka, MongoDB, Redis, Traefik, Cilium, Rook/CephFS
 
-      - name: Javascript & jQuery
-        level: 98%
+      - title: Expert knowledge - development
+        link: "#"
+        tagline: "Java (since 1.5), PostgreSQL (since 9.3)"
 
-      - name: Angular
-        level: 98%
+      - title: Professional - development
+        link: "#"
+        tagline: "Scala, PHP, Go, GitLab, Github, Bitbucket"
 
-      - name: HTML5 & CSS
-        level: 95%
 
-      - name: Ruby on Rails
-        level: 85%
-
-      - name: Sketch & Photoshop
-        level: 60%
 
 #footer: >
 #    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
