--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,7 +18,7 @@ sidebar:
     timezone: Europe/Prague
     citizenship: Ostrava, Czech Republic
     website: 
-    linkedin: 
+    linkedin: david-pech
     xing: 
     github: 
     telegram: # add your nickname without '@' sign
