--- a/_data/data.yml
+++ b/_data/data.yml
@@ -66,7 +66,7 @@ experiences:
           - Secured project using AWS Organizations, IAM focused on the Well-Architected framework
           - Contributed to initial MVP analysis and coordinated UX feature design
 
-      - role: Principal DevOps Engineer
+      - role: Principal Software Engineer
         time: 2020/11 - 2023/12
         company: U & SLUNO, Ostrava, CZ
         details: |
